fix: symbol icon getting cropped in tablet screen size (#343)

--- a/packages/core/src/sass/app/_common/layout/app-layouts.scss
+++ b/packages/core/src/sass/app/_common/layout/app-layouts.scss
@@ -177,9 +177,6 @@
                 margin: 0 0.8rem;
                 white-space: nowrap;
             }
-            .ic-icon:not(.cq-symbol-dropdown) > svg {
-                padding: 0.4rem;
-            }
         }
 
         .chart-container__loader {
